--- a/09_index.css
+++ b/09_index.css
@@ -1,4 +1,31 @@
 * {
   margin: 0;
   padding: 0;
+  text-align: center;
+}
+
+h1 {
+  font-family: Arial, sans-serif;
+  background-color: #081b31;
+  color: #fff;
+  height: 5rem;
+  line-height: 5rem;
+}
+.choices {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 3rem;
+  margin-top: 5rem;
+}
+
+.choice {
+  height: 165px;
+  width: 165px;
+}
+img {
+  height: 150px;
+  width: 150px;
+  object-fit: cover;
+  border-radius: 50%;
 }
