--- a/09_index.css
+++ b/09_index.css
@@ -8,8 +8,8 @@ h1 {
   font-family: Arial, sans-serif;
   background-color: #081b31;
   color: #fff;
-  height: 5rem;
-  line-height: 5rem;
+  height: 4;
+  line-height: 4rem;
 }
 .choices {
   display: flex;
@@ -18,14 +18,47 @@ h1 {
   gap: 3rem;
   margin-top: 5rem;
 }
+.choice:hover {
+  cursor: pointer;
+  background-color: #081b31;
+}
 
 .choice {
   height: 165px;
   width: 165px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 img {
   height: 150px;
   width: 150px;
   object-fit: cover;
   border-radius: 50%;
+}
+
+.score-board {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  margin-top: 2rem;
+  gap: 5rem;
+}
+#user-score,
+#comp-score {
+  font-size: 3.5rem;
+}
+.msg-container {
+  margin-top: 5rem;
+}
+#msg {
+  margin-top: 5rem;
+  background-color: #081b31;
+  color: #fff;
+  height: 2rem;
+  display: inline;
+  padding: 1rem;
+  border-radius: 1rem;
 }
